--- a/dockertprojects/composition/vscodedevcontainer/.devcontainer/devcontainer.json
+++ b/dockertprojects/composition/vscodedevcontainer/.devcontainer/devcontainer.json
@@ -1,6 +1,6 @@
 {
 	"name": "< name >",
-	"dockerComposeFile": "../docker/docker-compose.yml",
+	"dockerComposeFile": "../.docker/docker-compose.yml",
 	"service": "< service name >",
 	"workspaceFolder": "< work space >"
 }
