--- a/Dockerfiles/python/Dockerfile.python3.10.9
+++ b/Dockerfiles/python/Dockerfile.python3.10.9
@@ -18,3 +18,5 @@ ENV LANG=ja_JP.UTF-8
 ENV LC_ALL=ja_JP.UTF-8
 
 ENV TZ Asia/Tokyo
+
+RUN bash <(curl -sSL https://raw.githubusercontent.com/skrjtech/linux-setup/main/installer/python.sh) 3.10.9
