--- a/Dockerfiles/scraping/Dockerfile
+++ b/Dockerfiles/scraping/Dockerfile
@@ -1,5 +1,4 @@
-ARG IMAGE_TAG
-FROM $IMAGE_TAG
+FROM ubuntu:latest
 
 SHELL [ "/bin/bash", "-c" ]
 
@@ -19,15 +18,23 @@ ENV LANG=ja_JP.UTF-8
 ENV LANGUAGE=ja_JP:jp
 ENV LC_ALL=ja_JP.UTF-8
 
-ENV PATH /usr/local/python/bin:$PATH
+# Python & Pycharm Install
+# RUN bash <(curl -sSL https://raw.githubusercontent.com/skrjtech/Archives/main/Installer/python.sh) 3.6.15
+# RUN bash <(curl -sSL https://raw.githubusercontent.com/skrjtech/Archives/main/Installer/python.sh) 3.7.17
+# RUN bash <(curl -sSL https://raw.githubusercontent.com/skrjtech/Archives/main/Installer/python.sh) 3.8.18
+RUN bash <(curl -sSL https://raw.githubusercontent.com/skrjtech/Archives/main/Installer/python.sh) 3.9.18
+# RUN bash <(curl -sSL https://raw.githubusercontent.com/skrjtech/Archives/main/Installer/python.sh) 3.10.13
+# RUN bash <(curl -sSL https://raw.githubusercontent.com/skrjtech/Archives/main/Installer/python.sh) 3.11.5
+# Pycharm Version Release look at link https://www.jetbrains.com/ja-jp/pycharm/download/other.html
+RUN bash <(curl -sSL https://raw.githubusercontent.com/skrjtech/Archives/main/Installer/pycharm.sh) 2023.2.1
 
+RUN python -m venv /scraping
+RUN source /scraping/bin/activate
+
+# pip update
+RUN pip install --upgrade pip
 # Scraping
-RUN python -m pip install requests \
-                          selenium \
-                          requests-html \
-                          beautifulsoup4 \
-                          webdriver-manager
-
+RUN python -m pip install requests selenium requests-html beautifulsoup4 webdriver-manager
 # 画像処理用
 RUN apt install -y ffmpeg
 
