--- a/Dockerfiles/python/docker-compose.yml
+++ b/Dockerfiles/python/docker-compose.yml
@@ -2,11 +2,11 @@ version: '3.9'
 services:
   python:
     build: 
-      context: ubuntu
-      dockerfile: ./Dockerfile.python3.9.18
+      context: .
+      dockerfile: Dockerfile
       # args:
       #   - IMAGE_TAG=debian:latest
-    image: python3.9.18
+    image: python
     container_name: pythonenv
     tty: true
     restart: always
